--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -204,7 +204,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
           <h3>Statystyki</h3>
           <p>Ilość aren: {{ cart.overAll() }} </p>
           <p>Suma gold: {{ cart.overAllGold() }}</p>
@@ -217,6 +217,18 @@
           <p>Niesplacone: {{ cart.overAllBadGames() }}</p>
           <p>zysk/strata w stodsunku do zwyklych gier: {{ cart.overAllGrind() }}</p>
           <p>Szacunkowy czas gry: {{ cart.overAllTimePlayed() }}</p>
+        </div>
+        <div class="col-md-6">
+          <h3>Klasy:</h3>
+          <p>Hunter: {{ cart.overAllHunter() }} </p>
+          <p>Warlock: {{ cart.overAllWarlock() }} </p>
+          <p>Warrior: {{ cart.overAllWarrior() }} </p>
+          <p>Rogue: {{ cart.overAllRogue() }} </p>
+          <p>Druid: {{ cart.overAllHunter() }} </p>
+          <p>Shaman: {{ cart.overAllShaman() }} </p>
+          <p>Mage: {{ cart.overAllMage() }} </p>
+          <p>Paladin: {{ cart.overAllPaladin() }} </p>
+          <p>Priest: {{ cart.overAllPriest() }} </p>
         </div>
       </div>
     </div>
