Get JSON moved to service

--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -314,6 +314,7 @@
     <script src="app/index.module.js"></script>
     <script src="app/main/product.model.js"></script>
     <script src="app/main/main.controller.js"></script>
+    <script src="app/main/getJsonService.js"></script>
     <script src="app/main/cart.model.js"></script>
     <script src="app/index.run.js"></script>
     <script src="app/index.constants.js"></script>
