--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <title>cartProject</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css"> -->
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
@@ -212,11 +211,11 @@
 
       <div class="col-md-12 main__filter">
         <div class="row">
-          <div class="col-md-2"><p><span class="fa fa-sort" aria-hidden="true"></span>Filter by Class:</p></div>
-          <div class="col-md-2"><p><span class="fa fa-sort" aria-hidden="true"></span>Filter by Wins:</p></div>
+          <div class="col-md-2"><p><span class="fa fa-filter" aria-hidden="true"></span> Filter by Class:</p></div>
+          <div class="col-md-2"><p><span class="fa fa-filter" aria-hidden="true"></span> Filter by Wins:</p></div>
           <div class="col-md-2"></div>
           <div class="col-md-2"></div>
-          <div class="col-md-2"><p><span class="fa fa-sort" aria-hidden="true"></span>Filter by HA score:</p></div>
+          <div class="col-md-2"><p><span class="fa fa-filter" aria-hidden="true"></span> Filter by HA score:</p></div>
           <div class="col-md-2"></div>
         </div>
         <div class="row">
@@ -267,14 +266,14 @@
           <table class="table table-hover aTable">
             <thead class="aThead">
               <tr class="aTr">
-                <th ng-click="orderByMe('char')">CLASS</th>
-                <th ng-click="orderByMe('wins')">WINS</th>
+                <th ng-click="orderByMe('char')">CLASS <span class="fa fa-sort" aria-hidden="true"></span></th>
+                <th ng-click="orderByMe('wins')">WINS <span class="fa fa-sort" aria-hidden="true"></span></th>
                 <th>PACK1</th>
                 <th>PACK2</th>
                 <th>PACK3</th>
                 <th>PACK4</th>
                 <th>PACK5</th>
-                <th ng-click="orderByMe('score')">HA SCORE</th>
+                <th ng-click="orderByMe('score')">HA SCORE <span class="fa fa-sort" aria-hidden="true"></span></th>
                 <th>btn</th>
               </tr>
             </thead>
@@ -297,7 +296,6 @@
         </div>
       </div>
     </div>
-
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
