--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -297,7 +297,13 @@
           </table>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-6">
+          <canvas id="base" class="chart-horizontal-bar" chart-data="data" chart-labels="labels"></canvas> 
+        </div>
+      </div>
     </div>
+
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
