--- a/src/index.html
+++ b/src/index.html
@@ -295,7 +295,13 @@
           </table>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-6">
+          <canvas id="base" class="chart-horizontal-bar" chart-data="data" chart-labels="labels"></canvas> 
+        </div>
+      </div>
     </div>
+
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
