--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -27,7 +27,6 @@
     <![endif]-->
 
     <div class="container" ng-controller="MainController as main">
-
       <div class="row stats">
         <div class="col-md-6">
           <h3>Statystyki</h3>
@@ -297,12 +296,15 @@
           </table>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <canvas id="base" class="chart-horizontal-bar" chart-data="data" chart-labels="labels"></canvas> 
-        </div>
+    </div>
+
+  <div class="container" ng-controller="BarChartController as bar">
+    <div class="row">
+      <div class="col-md-6">
+        <canvas id="base" class="chart-horizontal-bar" chart-data="data" chart-labels="labels"></canvas>
       </div>
     </div>
+  </div>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
@@ -323,6 +325,7 @@
     <script src="app/main/main.controller.js"></script>
     <script src="app/main/getJsonService.js"></script>
     <script src="app/main/cart.model.js"></script>
+    <script src="app/main/barChart.controller.js"></script>
     <script src="app/index.run.js"></script>
     <script src="app/index.constants.js"></script>
     <script src="app/index.config.js"></script>
