--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,6 @@
     <![endif]-->
 
     <div class="container" ng-controller="MainController as main">
-
       <div class="row stats">
         <div class="col-md-6">
           <h3>Statystyki</h3>
@@ -295,12 +294,15 @@
           </table>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <canvas id="base" class="chart-horizontal-bar" chart-data="data" chart-labels="labels"></canvas> 
-        </div>
+    </div>
+
+  <div class="container" ng-controller="BarChartController as bar">
+    <div class="row">
+      <div class="col-md-6">
+        <canvas id="base" class="chart-horizontal-bar" chart-data="data" chart-labels="labels"></canvas>
       </div>
     </div>
+  </div>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
