--- a/src/index.html
+++ b/src/index.html
@@ -303,6 +303,16 @@
       </div>
     </div>
   </div>
+  <div class="container" ng-controller="LineChartController as bar">
+    <div class="row">
+      <div class="col-md-12">
+      <canvas id="line" class="chart chart-line" chart-data="data"
+      chart-labels="labels" chart-series="series" chart-options="options"
+      chart-dataset-override="datasetOverride" chart-click="onClick">
+      </canvas>
+      </div>
+    </div>
+  </div>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
