PouchDB local NoSQL added

--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -87,6 +87,7 @@
 		    </div>
 	   	</pane>
 	   	<pane title="None">
+      <button ng-click="DBclear()">clear DB</button> <!-- delete after debugging -->
 	   	</pane>
 	</tabs> 
 
@@ -299,6 +300,7 @@
     <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/chart.js/dist/Chart.js"></script>
     <script src="../bower_components/angular-chart.js/dist/angular-chart.js"></script>
+    <script src="../bower_components/pouchdb/dist/pouchdb.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
