--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,7 @@
 		    </div>
 	   	</pane>
 	   	<pane title="None">
+      <button ng-click="DBclear()">clear DB</button> <!-- delete after debugging -->
 	   	</pane>
 	</tabs> 
 
